# catflap-prey-detector

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
deploy/: 10-persistent.conf  10-watchdog.conf  README.md  catflap-detector.service
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT_TOOLS.md  HARDWARE_SETUP.md  PREY_DETECTION_API.md  PRIVACY_POLICY.md  REFUND_CANCELLATION_POLICY.md  RELIABILITY.md  TERMS_OF_SERVICE.md
models/yolo11n_ncnn_model_384_640/: metadata.yaml  model.ncnn.param  model_ncnn.py
src/catflap_prey_detector/: __init__.py  main.py
src/catflap_prey_detector/classification/: README.md  __init__.py
src/catflap_prey_detector/cloud/: README.md  storage_sync.py  sync_scheduler.py
src/catflap_prey_detector/core/: __init__.py  logging.py  watchdog.py
src/catflap_prey_detector/detection/: README.md  __init__.py  camera_manager.py  config.py  detection_pipeline.py  detection_result.py  fastapi_mjpeg_server.py  prey_detector_tracker.py  tracker.py  yolo_detector.py
tests/: conftest.py
tests/test_classification/: __init__.py  test_async_utils_concurrency.py  test_detector.py
tests/test_cloud/: __init__.py  test_storage_sync.py
tests/test_core/: __init__.py
tests/test_detection/: __init__.py  test_camera_manager.py  test_detection_result.py  test_prey_detector_tracker.py  test_tracker.py  test_yolo_detector.py
tests/test_hardware/: test_catflap_controller.py  test_rfid_jammer.py
tests/test_integration/: __init__.py  test_end_to_end.py
tests/test_notifications/: __init__.py  test_telegram_bot.py
(+11 files in other folders)
